pretty_print handles typed records; exprecs gets more type specs

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -10,13 +10,16 @@ test: $(APPLICATION) $(TEST_BEAMS) ../util/run_test.beam
 	@echo Running tests
 	@erl -pa ../util/ -pa ../ebin/ -pa test/ -noinput -s run_test run
 
-%.beam: %.erl $(HEADERS) 
+test_exprecs.beam: ../ebin/exprecs.beam
+	@echo Compiling test_exprecs.erl
+	@erlc +debug_info -pa ../ebin -pa . -I ../include test_exprecs.erl
+
+%.beam: %.erl $(HEADERS)
 	@echo Compiling $<
 	@erlc +debug_info -pa ../ebin -pa . -I ../include $<
 
 test.beam: test_pt.beam
 
-test_exprecs.erl: ../ebin/exprecs.beam
 
 clean:
 	@echo Cleaning
