--- a/rebar.config
+++ b/rebar.config
@@ -5,8 +5,8 @@
 
 {erl_opts, [debug_info]}.
 {xref_checks, [undefined_function_calls]}.
-{deps, [{edown, ".*", {git, "git://github.com/esl/edown.git", "HEAD"}}]}.
+{deps, [{edown, ".*", {git, "git://github.com/uwiger/edown.git", "0.5"}}]}.
 {edoc_opts, [{doclet, edown_doclet},
 	     {top_level_readme,
               {"./README.md",
-               "http://github.com/esl/parse_trans"}}]}.
+               "http://github.com/uwiger/parse_trans"}}]}.
