--- a/rebar.config
+++ b/rebar.config
@@ -25,9 +25,7 @@
 {profiles,
  [{docs,
    [
-    {deps,
-     [{edown, ".*",
-       {git, "git://github.com/uwiger/edown.git", {tag, "0.8"}}}]},
+    {deps, [{edown, "0.8.1"}]},
     {edoc_opts, [{doclet, edown_doclet},
                  {top_level_readme,
                   {"./README.md",
