--- a/rebar.config
+++ b/rebar.config
@@ -19,7 +19,9 @@
                    "src/parse_trans_pp.erl",
                    "src/parse_trans_codegen.erl"]}.
 
-{erl_opts, [debug_info]}.
+{erl_opts, [debug_info
+           ,{platform_define, "^(R|1|20)", use_get_stacktrace}
+           ]}.
 {xref_checks, [undefined_function_calls]}.
 
 {profiles,
