make rebar3 build examples in test prof
run rebar3 eunit in travis

--- a/rebar.config
+++ b/rebar.config
@@ -31,5 +31,10 @@
                  {top_level_readme,
                   {"./README.md",
                    "http://github.com/uwiger/parse_trans"}}]}
-   ]}
+   ]},
+  {test,
+   [
+    {extra_src_dirs, ["examples"]}
+   ]
+  }
  ]}.
