make rebar3 build examples in test prof (#2)
run rebar3 eunit in travis

By adding a `test` profile that at least compiles the `examples` code, CI is improved a bit more.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,8 @@ otp_release:
 - 20.3
 - 19.3
 - 18.3
-- 17.5
 script:
-- rebar3 compile
+- rebar3 eunit
 notifications:
   email:
     on_success: never
