Update Travis OTP vsns (21 and later), fix try/catch and some edoc

--- a/rebar.config
+++ b/rebar.config
@@ -30,7 +30,8 @@
     {edoc_opts, [{doclet, edown_doclet},
                  {top_level_readme,
                   {"./README.md",
-                   "http://github.com/uwiger/parse_trans"}}]}
+                   "http://github.com/uwiger/parse_trans",
+                   "master"}}]}
    ]},
   {test,
    [
