--- a/rebar.config
+++ b/rebar.config
@@ -15,6 +15,8 @@
 %% under the License.
 %% --------------------------------------------------
 
+{minimum_otp_vsn, "21.0"}.
+
 {erl_first_files, ["src/parse_trans.erl",
                    "src/parse_trans_pp.erl",
                    "src/parse_trans_codegen.erl"]}.
