Keep previous behaviour

--- a/rebar.config
+++ b/rebar.config
@@ -21,7 +21,8 @@
                    "src/parse_trans_pp.erl",
                    "src/parse_trans_codegen.erl"]}.
 
-{erl_opts, [debug_info
+{erl_opts, [debug_info,
+            {error_location, line}
            ]}.
 {xref_checks, [undefined_function_calls]}.
 
