Add ex_doc, fix Makefile

--- a/rebar.config
+++ b/rebar.config
@@ -25,11 +25,20 @@
            ]}.
 {xref_checks, [undefined_function_calls]}.
 
+{ex_doc, [
+     {extras, ["README.md", "LICENSE"]},
+     {main, "README.md"},
+     {source_url, "https://github.com/uwiger/parse_trans"}
+]}.
+
+{hex, [{doc, ex_doc}]}.
+
 {profiles,
- [{docs,
+ [{doc,
    [
-    {deps, [{edown, "0.8.4"}]},
+    {deps, [{edown, "0.9.1"}]},
     {edoc_opts, [{doclet, edown_doclet},
+                 {branch, "master"},
                  {top_level_readme,
                   {"./README.md",
                    "http://github.com/uwiger/parse_trans",
