--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        otp: [21, 22, 23, 24, 25]
+        otp: [21, 22, 23, 24, 25, 26]
       fail-fast: false
     container:
       image: erlang:${{ matrix.otp }}
